# prop_research

./: .env.example  .gitignore  README.md  config.yaml  loop_ingest.bat  pyproject.toml  requirements.txt
data/: player_features_snapshot.csv  today_props_raw.example.json
models/eval/: training_metrics.csv
src/: __main__.py  backtest.py  cli.py  db.py  ev_calc.py  features.py  ingest_boxscores.py  ingest_games.py  ingest_injuries.py  models.py  ocr_helper.py  projections.py  props_io.py  review.py  schema.sql
